# aurl-rust

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-2.0.txt  README.md  about.toml  docker-compose.yml
.github/workflows/: release.yml  rust.yml  test.yml
examples/: example.md  profile.ini
keycloak/: realm.json
scripts/: version.rs
src/: access_token_cache.rs  authserver.rs  cli.rs  logger.rs  main.rs  oauth2.rs  options.rs  output.rs  profile.rs  request.rs  version.rs
src/request/: auth_header.rs  body.rs  cors.rs  custom_headers.rs  dispatcher.rs  error.rs  headers.rs  mod.rs  modifier.rs  response.rs  timeout.rs
src/request/modifier/: auth_header.rs  body.rs  custom_headers.rs  headers.rs  mod.rs  timeout.rs
