[package]
name = "aurl-rust"
version = "0.1.0"
authors = ["Sasaki Kazuhiro <sasaki.kazuhiro@classmethod.jp>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cm-kazup0n/aurl-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.66"
async-trait = "0.1.51"
tini = "1.1"
dirs = "3.0.2"
clap = "3.0.0-beta.2"
log4rs = {version = "1.0.0", features = ["pattern_encoder"]}
log = "0.4.14"
rand = "0.8.4"
webbrowser = "0.5.5"
base64 = "0.3.0"
sha2 = "0.9.8"
base64-url = "1.4.10"
