[package]
name = "aurl-rust"
version = "0.1.3"
authors = ["Sasaki Kazuhiro <sasaki.kazuhiro@classmethod.jp>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cm-kazup0n/aurl-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "version"
path = "scripts/version.rs"

[[bin]]
name = "aurl-rust"
path = "src/main.rs"

[dependencies]

reqwest = { version = "^0.11.10", features = ["json"] }
tokio = { version = "^1.18.5", features = ["full"] }
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
async-trait = "^0.1.52"
tini = "^1.0.3"
dirs = "^4.0.0"
clap = {version = "^3.1.6", features = ["derive"]}
log4rs = {version = "^1.0.0", features = ["pattern_encoder"]}
log = "^0.4.14"
rand = "^0.8.4"
webbrowser = "^0.6.0"
base64 = "^0.13.0"
sha2 = "^0.10.2"
base64-url = "^1.4.13"
regex = "1"

